# Bottie

./: .env.example  .gitignore  Cargo.toml  Dockerfile  autoresearch.service  bottie.service  config.yaml  dashboard.py  dashboard.service  dashboard_consensus.py  deploy.sh  docker-compose.yml  repo_dashboard.py  wallet_scout.service
council/: council_2026-04-16_btc5m_projection.html  council_2026-04-16_btc5m_projection.md  council_2026-04-17_justdance.html  council_2026-04-17_justdance.md  council_20260402.html  council_20260402.md  council_20260402_cannae.html  council_20260402_cannae.md  council_20260402_signaal.html  council_20260402_signaal.md  council_20260402_sizing.html  council_20260402_sizing.md  council_20260402_theorie_validatie.html  council_20260402_theorie_validatie.md  council_20260403.html  council_20260403.md  council_20260403_rapport_review.md  council_20260405_1.html  council_20260405_1.md  council_20260406_1.html  council_20260406_1.md  council_20260407_0023.html  council_20260407_0023.md  council_20260411_1.html  council_20260411_1.md  council_20260411_2.md  council_20260413_1.html  council_20260413_1.md  council_20260414_prompt_review.md  council_20260414_scout.html  council_20260414_strategy.html  prompt_codex.md  prompt_rn1_strategy.md
deploy/: cannae-intel.service  cannae-intel.timer
research/: analyzer.py  autoresearch.py  backtest.py  bottie_trades_live.jsonl  build_decision_table.py  cannae_hauptbet_analysis.py  consensus_scout.py  curator.py  dag.py  data_loader.py  deployer.py  download_data_lake.py  download_sport_prices.py  fitness.py  (+17 more)
(+173 files in other folders)
